@@ -5,6 +5,7 @@
 	- Add configure options --with-eix-{user,group,uid,gid}
 	- Add contrib/iwyu.sh experimentally
 	- Include README.md, eix.png into distribution
+	- ./configure test for diagnostics suggest-final-methods
 	- Prepend (not append) dialect flags when testing, for consistency with
 	  later usage, see https://bugs.gentoo.org/show_bug.cgi?id=649558
 
